[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/four_way_occluder.gd" type="Script" id=1]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 0, 128, 0, 138, 128, 138, 128, 128 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 0, 0, -10, 128, -10, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, 0, 0, 128, -10, 128, -10, 0 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 138, 0, 138, 128, 128, 128, 128, 0 )

[node name="FourWayOccluder" type="Node2D"]
script = ExtResource( 1 )

[node name="LightOccluderS" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="LightOccluderN" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="LightOccluderW" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="LightOccluderE" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 134, 206.602 )
